<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LaunchActivity">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:id="@+id/maze_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/str_maze_icon"
            android:textColor="@color/colorDeepBlue"
            android:textSize="55sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/maze_intro"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/maze_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_maze_intro"
            android:textColor="@color/colorLightBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maze_icon" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/colorDeepBlue">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/height_input_wrapper"
            android:layout_width="300dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toTopOf="@id/luanch_generate_maze"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed">

            <LinearLayout
                android:id="@+id/edit_width_wrapper"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input"
                android:orientation="horizontal"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/edit_height_wrapper">

                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/hint_width"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Width:"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <EditText
                    android:textCursorDrawable="@drawable/corsor"
                    android:maxLength="3"
                    android:inputType="number"
                    android:layout_marginStart="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/edit_width"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_height_wrapper"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:background="@drawable/bg_input"
                android:orientation="horizontal"
                app:layout_constraintLeft_toRightOf="@id/edit_width_wrapper"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:layout_marginStart="10dp"
                    android:id="@+id/hint_height"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="Height:"
                    android:textColor="@color/colorWhite"
                    android:textSize="13sp" />

                <EditText
                    android:textCursorDrawable="@drawable/corsor"
                    android:maxLength="3"
                    android:inputType="number"
                    android:layout_marginStart="10dp"
                    android:textSize="14sp"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/edit_height"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null" />
            </LinearLayout>


        </android.support.constraint.ConstraintLayout>

        <Button
            android:id="@+id/luanch_generate_maze"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/bg_button"
            android:orientation="vertical"
            android:text="@string/text_generate_maze"
            android:textColor="@color/colorWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/height_input_wrapper" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/str_designer"
            android:textColor="@color/colorLightBlue"
            android:textSize="10sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/luanch_generate_maze" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
