<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MazeActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/maze_container"
            android:layout_width="match_parent"
            android:layout_height="383dp"
            android:background="@color/colorLightBlue">

            <!--<FrameLayout-->
            <!--android:layout_gravity="center"-->
            <!--android:id="@+id/activity_main_fill"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"-->
            <!--android:background="@color/colorWhite" />  -->

            <com.pigrange.maze.customView.MazeView
                android:id="@+id/maze_fill"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/colorWhite" />

        </FrameLayout>

        <android.support.constraint.ConstraintLayout
            android:id="@+id/maze_footer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorDeepBlue"
            android:isScrollContainer="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/maze_status"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/maze_refresh"
                app:layout_constraintLeft_toLeftOf="@id/maze_refresh"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Current Statues :"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/maze_status_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Finding A Way Out"
                    android:textColor="@color/colorWhite"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/maze_refresh"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/bg_button"
                android:text="@string/str_remove_barrier"
                android:textColor="@color/colorWhite"
                app:layout_constraintBottom_toTopOf="@id/button_group"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/maze_status" />

            <LinearLayout
                android:id="@+id/button_group"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/line4"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/maze_refresh">

                <Button
                    android:id="@+id/A_STAR_find_way_out"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:text="@string/A_STAR_str_find_way_out"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/DFS_find_way_out"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:text="@string/DFS_str_find_way_out"
                    android:textColor="@color/colorWhite" />

                <Button
                    android:id="@+id/BFS_find_way_out"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/bg_button"
                    android:text="@string/BFS_str_find_way_out"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/line4"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_group">


                <TextView
                    android:id="@+id/maze_steps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>


        </android.support.constraint.ConstraintLayout>


    </LinearLayout>


</android.support.constraint.ConstraintLayout>
